# move-anything

./: .gitignore  .gitmodules  AGENTS.md  BUILDING.md  CLAUDE.md  CURRENT_SHAPE.md  Dockerfile  FEATURE-PLAN.md  LICENSE  MANUAL.md  PLAN-16-track-ui.md  PLAN-arp.md  PLAN-led-refactor.md  PLAN-queued-pattern-switch.md  PLAN-sets-refactor.md  README.md  SCREEN_READER_TEST.md  TESTING_SCREEN_READER.md  THIRD_PARTY_LICENSES  THIRD_PARTY_LICENSES.md  build.sh  clean.sh  copy_to_move.sh  current_shape.md  dev.sh  module-catalog.json  move_audio_recv  package.sh  release.json  test_master.wav.asd  test_slot1.wav.asd  test_slot2.wav.asd  test_slot4.wav.asd  uninstall.sh
docker/: Dockerfile.arm64
docs/: ADDRESSING_MOVE_SYNTHS.md  API.md  ARCHITECTURE.md  FORKING.md  GAIN_STAGING_ANALYSIS.md  GETTING_STARTED.md  LINK_AUDIO_WIRE_FORMAT.md  LOGGING.md  MODULES.md  NATIVE_MOVE_MIDI_FINDINGS.md  PLAN-external-cc.md  SEQUENCER.md  SHADOW_INSTRUMENT_STATUS.md  TESTING-0.3.3.md  V2_API_TESTING.md  byebye-rewrite-approach.md  code-review-round-2.md  move-auth-api.md  release-notes-next.md  shadow_chain_config.example.json  shadow_ui_test_plan.md  tts-architecture.md  tts-config.example.json  tts-config.md
examples/: shadow_poc.c
installer/: README.md  check.sh  install.sh  package-lock.json  package.json
installer/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
installer/src-tauri/src/: auth.rs  cookie_storage.rs  device.rs  diagnostics.rs  install.rs  lib.rs  ssh.rs
libs/: link-subscriber-no-session-join.patch
schwung-manager/: go.mod  main.go  module_config.go  (+4 more)
(+554 files in other folders)
