[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["cookies", "json"] }
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.7"
keyring = "2.0"
dirs = "5.0"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }
